[project]
name = "1-etl-planilhas-excel"
version = "0.1.0"
description = ""
authors = [
    {name = "Romulo", email = "romubah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "pydocstyle (>=6.3.0,<7.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "1_etl_planilhas_excel", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
# run = 
# test = 